Add site contents.

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -110,6 +110,10 @@
 		font-size: 0.6rem;
 	}
 
+	table {
+		font-size: 0.8rem;
+	}
+
 	@include breakpoint(small) {
 		h1 {
 			font-size: 1.75rem;
